# SpeakerTest

./: .gitignore  AlarmLight.h  AudioProcess.cpp  AudioProcess.h  AutoLine.cpp  AutoLine.h  CMakeLists.txt  CMakeLists.txt.user.5a21889  CodeReader.cpp  CodeReader.cpp.bak  CodeReader.h  DataSource.cpp  DataSource.h  Dlg4ChangeValue.cpp  Dlg4ChangeValue.h  Dlg4ChangeValue.ui  ExcelOperator.cpp  MyCommonFun.cpp  MyCommonFun.h  README.md  RecordWorker.cpp  RecordWorker.h  Setup4AutoTest.cpp  Setup4AutoTest.h  Setup4AutoTest.ui  Setup4Devices.ui  SpeakersTest_zh_CN.ts  TempForm.cpp  TempForm.h  TempForm.ui  config.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmydisplaydevice.cpp  recordworker.cpp  recordworker.h  res.qrc  setup4mic.cpp  (+10 more)
RecordWorker/: AudioProcess.cpp  AudioProcess.h  DataSource.cpp  DataSource.h  RecordWorker.cpp  RecordWorker.h  get_aubio_filter.cpp  get_aubio_filter.h
UI/: Setup4AutoTest.cpp  Setup4AutoTest.h  Setup4AutoTest.ui  Setup4Devices.cpp  Setup4Devices.h  Setup4Devices.ui  TempForm.ui  setup4mic.cpp  setup4mic.ui  setup4model.h  setup4model.ui  showinfo4result.cpp  showinfo4result.ui
config/: config.h
devices/: AlarmLight.cpp  AutoLine.h  CodeReader.h
log/: simplelog.cpp
temp/: ExcelOperator.h
util/: MyCommonFun.cpp  MyCommonFun.h
